--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>BDStreamHub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>BDStreamHub - Live Matches & Upcoming</title>
   <style>
     body {
       margin: 0;
@@ -39,30 +39,6 @@
       color: #fff;
       text-align: center;
     }
-    .menu {
-      font-size: 24px;
-      cursor: pointer;
-      position: relative;
-    }
-    .menu:hover .dropdown {
-      display: block;
-    }
-    .dropdown {
-      display: none;
-      position: absolute;
-      right: 0;
-      top: 30px;
-      background: #333;
-      border-radius: 8px;
-      padding: 10px;
-      z-index: 10;
-    }
-    .dropdown a {
-      color: #fff;
-      text-decoration: none;
-      display: block;
-      padding: 5px 10px;
-    }
     .notice {
       background: yellow;
       color: #000;
@@ -70,27 +46,67 @@
       font-weight: bold;
       text-align: center;
     }
-    .notice marquee {
-      font-weight: bold;
-    }
-    .tab-btns {
-      padding: 10px;
+
+    /* সাব-ট্যাব স্টাইল */
+    .sub-tab-btns {
+      padding: 8px;
       text-align: center;
+      background: #222;
     }
-    .tab-btns button {
-      margin: 0 5px;
-      padding: 8px 12px;
+    .sub-tab-btns button {
+      margin: 0 6px;
+      padding: 6px 14px;
       border: none;
       border-radius: 5px;
       background: #333;
       color: #fff;
       cursor: pointer;
+      font-weight: 600;
+      font-size: 14px;
+      transition: background 0.3s ease;
     }
-    .tab-btns .active {
+    .sub-tab-btns button:hover {
       background: #0af;
     }
+    .sub-tab-btns .active {
+      background: #0af;
+    }
+
+    /* নিচের বড় ট্যাব স্টাইল */
+    .bottom-tab-btns {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background: #222;
+      display: flex;
+      justify-content: space-around;
+      padding: 10px 0;
+      box-shadow: 0 -2px 8px rgba(0,0,0,0.8);
+      z-index: 1000;
+    }
+    .bottom-tab-btns button {
+      background: #333;
+      border: none;
+      color: #fff;
+      padding: 12px 20px;
+      font-size: 16px;
+      font-weight: 700;
+      border-radius: 8px;
+      cursor: pointer;
+      flex: 1;
+      margin: 0 8px;
+      transition: background 0.3s ease;
+    }
+    .bottom-tab-btns button.active {
+      background: #0af;
+      color: #fff;
+    }
+    .bottom-tab-btns button:hover:not(.active) {
+      background: #555;
+    }
+
     #match-list {
-      padding: 10px;
+      padding: 10px 10px 70px; /* নিচের ট্যাব স্পেস ফাঁকা রাখলাম */
     }
     .match {
       background: #1a1a1a;
@@ -110,25 +126,25 @@
       justify-content: center;
       font-size: 16px;
       font-weight: bold;
-      margin-top: 10px;
+      margin-bottom: 8px;
     }
     .teams img {
-      height: 45px;
-      width: 45px;
+      height: 30px;
+      width: 30px;
       border-radius: 50%;
       margin: 0 10px;
     }
     .match-time {
       font-size: 14px;
       text-align: center;
-      margin-bottom: 6px;
+      margin-bottom: 8px;
       color: #bbb;
     }
     .countdown, .started {
       font-size: 15px;
       text-align: center;
       color: #0f0;
-      margin-bottom: 8px;
+      margin-bottom: 10px;
     }
     .btns {
       text-align: center;
@@ -137,15 +153,17 @@
     .btns a {
       background: #08f;
       color: #fff;
-      padding: 6px 10px;
+      padding: 6px 12px;
       text-decoration: none;
       border-radius: 5px;
-      margin: 0 4px;
+      margin: 0 5px;
+      display: inline-block;
+      font-weight: 600;
+      font-size: 14px;
     }
     .liveBlink {
-      position: relative;
       display: inline-block;
-      padding: 6px 12px;
+      padding: 6px 14px;
       font-weight: 900;
       font-size: 16px;
       color: white;
@@ -162,15 +180,17 @@
       50% { opacity: 0.3; }
     }
     @keyframes gradientPulse {
-      0% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    /* TV & FM আলাদা সেকশন */
+    #tv-section, #fm-section {
+      padding: 10px;
+      font-size: 16px;
+      color: #ccc;
+      text-align: center;
     }
   </style>
 </head>
@@ -179,120 +199,141 @@
 <nav>
   <div class="logo">BDStreamHub</div>
   <div class="search-container">
-    <input id="search" type="text" placeholder="Search matches or teams"/>
-  </div>
-  <div class="menu">⋮
-    <div class="dropdown">
-      <a href="https://t.me/bdstreamhub" target="_blank">Telegram</a>
-    </div>
+    <input id="search" type="text" placeholder="Search matches or teams" />
   </div>
 </nav>
 
 <div class="notice">
-  <marquee scrollamount="5">Welcome To BDStreamHub ! Android User Download Now Network Stream (Video) Player Or Video Not Playing ! Pc or IPhone User Player Coming Soon... !  Apps Link Google Play Store Or BDStreamHub Telegram ! </marquee>
+  <marquee scrollamount="5">Welcome to BDStreamHub! Enjoy live and upcoming matches with server links.</marquee>
 </div>
 
-<div class="tab-btns">
-  <button id="liveTab" class="active">Live</button>
-  <button id="upcomingTab">Upcoming</button>
+<!-- সাব-ট্যাব শুধুমাত্র Live Category তে দেখাবে -->
+<div id="subTabs" class="sub-tab-btns" style="display:none;">
+  <button id="subLive" class="active">Live</button>
+  <button id="subUpcoming">Upcoming</button>
 </div>
 
 <div id="match-list"></div>
 
+<!-- TV এবং FM সেকশন -->
+<div id="tv-section" style="display:none;">
+  <h2>Live TV Channels</h2>
+  <p>TV Channel 1 - Link, TV Channel 2 - Link ... (এখানে TV এর লিংক দেখাবে)</p>
+</div>
+
+<div id="fm-section" style="display:none;">
+  <h2>FM Radio Stations</h2>
+  <p>FM Station 1 - Link, FM Station 2 - Link ... (এখানে FM এর লিংক দেখাবে)</p>
+</div>
+
+<!-- নিচের বড় ৩টা ট্যাব -->
+<div class="bottom-tab-btns">
+  <button id="bottomLive" class="active">Live</button>
+  <button id="bottomTV">TV</button>
+  <button id="bottomFM">FM</button>
+</div>
+
 <script>
-  const api = "https://script.google.com/macros/s/AKfycbys6AFNs2s1MKZ1zyJxaeUW-_Vmq5BuIEC8Qjyr-zXkx_x28F7rWTi2D0EmQlnsPvTnCQ/exec";
+  // API url (আপনার গুগল অ্যাপস স্ক্রিপ্ট / API url দিন এখানে)
+  const matchesApi = "https://script.google.com/macros/s/AKfycbys6AFNs2s1MKZ1zyJxaeUW-_Vmq5BuIEC8Qjyr-zXkx_x28F7rWTi2D0EmQlnsPvTnCQ/exec";
+
   let matches = [];
   let intervals = [];
+  let currentSubTab = 'live'; // Live Category এর জন্য সাব-ট্যাব
 
   function clearIntervals() {
     intervals.forEach(i => clearInterval(i));
     intervals = [];
   }
 
-  function fetchData() {
-    fetch(api).then(r => r.json()).then(data => {
-      matches = data.matches;
-      renderMatches();
-    });
-  }
-
   function getNow() { return new Date(); }
   function getCountdown(t) { return Math.max(0, new Date(t) - getNow()); }
-
   function formatCountdown(ms) {
     let s = Math.floor(ms / 1000), m = Math.floor(s / 60), h = Math.floor(m / 60), d = Math.floor(h / 24);
     h %= 24; m %= 60; s %= 60;
     return `${d}d ${h}h ${m}m ${s}s left`;
   }
-
   function formatCountUp(ms) {
     let s = Math.floor(ms / 1000), m = Math.floor(s / 60), h = Math.floor(m / 60);
     s %= 60; m %= 60;
     return `${h > 0 ? h + 'h ' : ''}${m}m ${s}s ago`;
   }
 
-  function renderMatches() {
+  function renderMatches(type = 'live') {
     clearIntervals();
     const now = getNow();
     const list = document.getElementById('match-list');
     list.innerHTML = "";
     const filter = document.getElementById('search').value.toLowerCase();
-    const activeTab = document.querySelector('.tab-btns .active').id === 'liveTab' ? "live" : "upcoming";
 
-    matches.forEach((m, i) => {
+    let filteredMatches = matches.filter(m => {
       const ct = new Date(m.MatchTime);
       const isLive = now >= ct;
 
-      if ((activeTab === "live" && !isLive) || (activeTab === "upcoming" && isLive)) return;
-      if (filter && !(m.Match.toLowerCase().includes(filter) || m.Team1.toLowerCase().includes(filter) || m.Team2.toLowerCase().includes(filter))) return;
+      if(type === 'live' && !isLive) return false;
+      if(type === 'upcoming' && isLive) return false;
+
+      if(filter && !(m.Match.toLowerCase().includes(filter) || m.Team1.toLowerCase().includes(filter) || m.Team2.toLowerCase().includes(filter))) return false;
+
+      return true;
+    });
+
+    if(filteredMatches.length === 0) {
+      list.innerHTML = `<p style="text-align:center; color:#aaa;">No ${type} matches found.</p>`;
+      return;
+    }
+
+    filteredMatches.forEach((m, i) => {
+      const ct = new Date(m.MatchTime);
+      const isLive = now >= ct;
 
       const div = document.createElement('div');
       div.className = "match";
 
       let timerHtml = '';
-      if (isLive) {
+      if(isLive){
         const diffLive = getNow() - ct;
         timerHtml = `
           <div class="liveBlink">LIVE</div>
-          <div class="countdown" id="cd${i}">Started ${formatCountUp(diffLive)}</div>
+          <div class="countdown" id="cd${type}${i}">Started ${formatCountUp(diffLive)}</div>
         `;
       } else {
         timerHtml = `
-          <div class="match-time">Starts at: ${ct.toLocaleDateString('en-US')} ${ct.toLocaleTimeString('en-US', { hour: 'numeric', minute: 'numeric', hour12: true })}</div>
-          <div class="countdown" id="cd${i}">${formatCountdown(getCountdown(m.MatchTime))}</div>
+          <div class="match-time">Starts at: ${ct.toLocaleDateString()} ${ct.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'})}</div>
+          <div class="countdown" id="cd${type}${i}">${formatCountdown(getCountdown(m.MatchTime))}</div>
         `;
       }
 
       div.innerHTML = `
-        <div class="teams" style="margin-bottom: 5px; justify-content: center; font-weight: bold; font-size: 16px;">
-          <img src="${m.Team1Logo}" alt="${m.Team1} logo" style="height:30px; width:30px; border-radius:50%; margin-right: 8px;">
+        <div class="teams">
+          <img src="${m.Team1Logo}" alt="${m.Team1} logo" loading="lazy" />
           ${m.Team1}
-          <span style="margin: 0 10px; color: #0af; font-weight: normal;">vs</span>
+          <span style="margin: 0 10px; color: #0af;">vs</span>
           ${m.Team2}
-          <img src="${m.Team2Logo}" alt="${m.Team2} logo" style="height:30px; width:30px; border-radius:50%; margin-left: 8px;">
+          <img src="${m.Team2Logo}" alt="${m.Team2} logo" loading="lazy" />
         </div>
         ${timerHtml}
         <div class="btns">
-          ${m.Intent1 ? `<a href="${m.Intent1}">Server 1</a>` : ""}
-          ${m.Intent2 ? `<a href="${m.Intent2}">Server 2</a>` : ""}
-          ${m.Intent3 ? `<a href="${m.Intent3}">Server 3</a>` : ""}
+          ${m.Intent1 ? `<a href="${m.Intent1}" target="_blank" rel="noopener noreferrer">Server 1</a>` : ""}
+          ${m.Intent2 ? `<a href="${m.Intent2}" target="_blank" rel="noopener noreferrer">Server 2</a>` : ""}
+          ${m.Intent3 ? `<a href="${m.Intent3}" target="_blank" rel="noopener noreferrer">Server 3</a>` : ""}
         </div>
       `;
 
       list.appendChild(div);
 
-      if (!isLive) {
+      if(!isLive) {
         intervals.push(setInterval(() => {
-          const cdEl = div.querySelector(`#cd${i}`);
-          if (cdEl) {
+          const cdEl = div.querySelector(`#cd${type}${i}`);
+          if(cdEl){
             const remain = getCountdown(m.MatchTime);
             cdEl.innerText = remain > 0 ? formatCountdown(remain) : "Starting soon";
           }
         }, 1000));
       } else {
         intervals.push(setInterval(() => {
-          const cdEl = div.querySelector(`#cd${i}`);
-          if (cdEl) {
+          const cdEl = div.querySelector(`#cd${type}${i}`);
+          if(cdEl){
             const diffLive = getNow() - ct;
             cdEl.innerText = `Started ${formatCountUp(diffLive)}`;
           }
@@ -301,19 +342,80 @@
     });
   }
 
-  document.getElementById('search').addEventListener('input', renderMatches);
-  document.getElementById('liveTab').onclick = e => {
-    e.target.classList.add('active');
-    document.getElementById('upcomingTab').classList.remove('active');
-    renderMatches();
-  };
-  document.getElementById('upcomingTab').onclick = e => {
-    e.target.classList.add('active');
-    document.getElementById('liveTab').classList.remove('active');
-    renderMatches();
-  };
+  // নিচের বড় ট্যাব হ্যান্ডলার
+  function showCategory(category) {
+    // প্রথমে সব ট্যাব হালকা করে দেব
+    document.getElementById('bottomLive').classList.remove('active');
+    document.getElementById('bottomTV').classList.remove('active');
+    document.getElementById('bottomFM').classList.remove('active');
 
-  fetchData();
+    // তারপর সিলেক্টেড ট্যাবে active যোগ করব
+    document.getElementById('bottom' + category.charAt(0).toUpperCase() + category.slice(1)).classList.add('active');
+
+    // সার্চ ইনপুট ফাঁকা করব
+    document.getElementById('search').value = '';
+
+    // সব সেকশন লুকিয়ে দিব
+    document.getElementById('subTabs').style.display = 'none';
+    document.getElementById('match-list').style.display = 'none';
+    document.getElementById('tv-section').style.display = 'none';
+    document.getElementById('fm-section').style.display = 'none';
+
+    if(category === 'live') {
+      // Live Category এ উপরের সাব-ট্যাব দেখাবো
+      document.getElementById('subTabs').style.display = 'block';
+      document.getElementById('match-list').style.display = 'block';
+      // প্রথমে সাব-ট্যাবে active সেট করে রেন্ডার করবো
+      currentSubTab = 'live';
+      setActiveSubTab(currentSubTab);
+      renderMatches(currentSubTab);
+    } else if(category === 'tv') {
+      document.getElementById('tv-section').style.display = 'block';
+    } else if(category === 'fm') {
+      document.getElementById('fm-section').style.display = 'block';
+    }
+  }
+
+  // সাব-ট্যাব হ্যান্ডলার
+  function setActiveSubTab(subTab) {
+    document.getElementById('subLive').classList.remove('active');
+    document.getElementById('subUpcoming').classList.remove('active');
+    document.getElementById('sub' + subTab.charAt(0).toUpperCase() + subTab.slice(1)).classList.add('active');
+  }
+
+  document.getElementById('bottomLive').addEventListener('click', () => showCategory('live'));
+  document.getElementById('bottomTV').addEventListener('click', () => showCategory('tv'));
+  document.getElementById('bottomFM').addEventListener('click', () => showCategory('fm'));
+
+  document.getElementById('subLive').addEventListener('click', () => {
+    currentSubTab = 'live';
+    setActiveSubTab(currentSubTab);
+    renderMatches(currentSubTab);
+  });
+
+  document.getElementById('subUpcoming').addEventListener('click', () => {
+    currentSubTab = 'upcoming';
+    setActiveSubTab(currentSubTab);
+    renderMatches(currentSubTab);
+  });
+
+  document.getElementById('search').addEventListener('input', () => {
+    if(document.getElementById('subTabs').style.display === 'block'){
+      renderMatches(currentSubTab);
+    }
+  });
+
+  // প্রথমে ডাটা লোড করে Live Category দেখাবে
+  fetch(matchesApi)
+    .then(res => res.json())
+    .then(data => {
+      matches = data.matches || [];
+      showCategory('live');
+    })
+    .catch(e => {
+      console.error('Error fetching matches:', e);
+      document.getElementById('match-list').innerHTML = '<p style="text-align:center; color:#f00;">Failed to load match data.</p>';
+    });
 </script>
 
 </body>
