--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BDStreamHub - Live Matches & Upcoming</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.4/lottie.min.js"></script>
   <style>
     body {
       margin: 0;
@@ -287,9 +288,36 @@
   });
 
   if (filteredMatches.length === 0) {
-    list.innerHTML = `<p style="text-align:center; color:#aaa;">No ${type} matches found.</p>`;
-    return;
-  }
+  let emojiMessage = '😴 No matches available right now.';
+  if (type === 'live') emojiMessage = '📴 No live matches at the moment.';
+  else if (type === 'upcoming') emojiMessage = '🕒 No upcoming matches found.';
+  else if (type === 'today') emojiMessage = '📅 No matches scheduled for today.';
+
+  list.innerHTML = `
+    <div style="
+      max-width: 420px;
+      margin: 40px auto;
+      padding: 30px 20px;
+      background: #1e1e1e;
+      border-radius: 14px;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.12);
+      color: #ccc;
+      font-family: 'Segoe UI', sans-serif;
+      font-size: 1.25rem;
+      font-weight: 500;
+      text-align: center;
+      user-select: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 14px;
+    ">
+      <span style="font-size: 2.5rem;">${emojiMessage.match(/^(\p{Emoji_Presentation}|\p{Extended_Pictographic})+/u)[0]}</span>
+      <span>${emojiMessage.replace(/^(\p{Emoji_Presentation}|\p{Extended_Pictographic})+\s*/, '')}</span>
+    </div>
+  `;
+  return;
+}
 
   filteredMatches.forEach((m, i) => {
     const ct = new Date(m.MatchTime);
