--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
   <title>BDStreamHub - Live Matches & Upcoming</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.4/lottie.min.js"></script>
   <style>
-    body {
+    body
+    <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#0af">
+
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service-worker.js')
+      .then(() => console.log('✅ Service Worker registered!'))
+      .catch(err => console.error('❌ SW Error:', err));
+  }
+</script>
+    {
       margin: 0;
       background: #111;
       color: #fff;
