--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BDStreamHub - Live Matches & Upcoming</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.4/lottie.min.js"></script>
+  <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#0af">
   <style>
     body
     <link rel="manifest" href="manifest.json">
