--- a/index.html
+++ b/index.html
@@ -5,21 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BDStreamHub - Live Matches & Upcoming</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.4/lottie.min.js"></script>
-  <link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#0af">
   <style>
-    body
-    <link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#0af">
-
-<script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('service-worker.js')
-      .then(() => console.log('✅ Service Worker registered!'))
-      .catch(err => console.error('❌ SW Error:', err));
-  }
-</script>
-    {
+    body {
       margin: 0;
       background: #111;
       color: #fff;
