--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
 </nav>
 
 <div class="notice">
-  <marquee scrollamount="5">Welcome to BDStreamHub! Enjoy live and upcoming matches with server links.</marquee>
+  <marquee scrollamount="5">Welcome To BDStreamHub ! ⚠️ Attention All Users ! For flawless live sports streaming on your mobile device ! please install the NS Player app now !Without NS Player, videos may not play properly or could stop unexpectedly ! 📲 Don’t miss a single moment — install NS Player today and enjoy uninterrupted live matches ! You can download the app from:
+Google Play Store or join our Telegram channel for the latest updates and app links:BDStreamHub Telegram ! </marquee>
 </div>
 
 <!-- সাব-ট্যাব শুধুমাত্র Live Category তে দেখাবে -->
