--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BDStreamHub - Live Matches & Upcoming</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.4/lottie.min.js"></script>
+  <!-- manifest ফাইল লিংক -->
+<link rel="manifest" href="manifest.json">
+
+<!-- Service Worker রেজিস্টার -->
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('sw.js')
+      .then(() => console.log("✅ Service Worker registered"))
+      .catch(err => console.log("❌ SW error:", err));
+  }
+</script>
   <style>
   	.menu-dropdown {
   position: relative;
